# plex

./: Makefile  autogen.sh  configure.ac  dfa.c  dfa.h  gen.c  gen.h  lex.c  lex.h  macro.c  main.c  main.h  nfa.c  nfa.h  scan.c  scan.h  tidy.sh  tlex.c  tok.h  tom.c  tom.h
driver/: .driver.c.swp  driver.c  input.h
input_driver/: input.c
lib/: bits.h  debug.c  debug.h  error.c  error.h  file.c  hash.h  hashfunc.h  list.h  map.h  set.c  set.h  stack.h  textutils.c  textutils.h  util.h
src/: .Makefile.am.swp  .gen.c.swp  .lex.h.swp  .main.c.swp  Makefile.am  Makefile.in  dfa.c  dfa.h  driver.c  gen.c  input.c  lex.c  lex.h  macro.h  main.c  scan.c  scan.h
src/lib/: .debug.h.swp  alloc.c  debug.c  debug.h  file.c  file.h  map.h  mystack.h  old_set.h  redblack.c  redblack.h  textutils.h  util.h
